<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <com.example.farid.newser.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:id="@+id/welcomeView"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:padding="5px"
        widget:Scratch="Scratch.ttf"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/welcomeView"
        android:layout_marginTop="20dp"
        android:weightSum="4">
        <com.example.farid.newser.widget.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/signing_string"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            widget:Scratch="Scratch.ttf"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/usernameId"
                android:layout_marginTop="40dp"
                android:hint="@string/username_hint_string"
                android:drawableRight="@drawable/user_ic"
                android:background="@drawable/ed_bg"
                android:inputType="text"
                android:imeOptions="actionNext"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/passwordId"
                android:hint="@string/password_hint_string"
                android:drawableRight="@drawable/password_ic"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/ed_bg"
                android:imeOptions="actionNext"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.example.farid.newser.widget.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/singningBtn"
                    android:text="@string/singing_btn_string"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/btn_bg"
                    widget:Scratch="Scratch.ttf"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp" />

                <com.example.farid.newser.widget.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/registerBtn"
                    android:text="@string/register_btn_string"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/btn_bg"
                    widget:Scratch="Scratch.ttf"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desi_by_string"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:padding="5px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>

